--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "application-name",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node app"
-  },
-  "dependencies": {
-    "express": "3.1.0",
-    "hjs": "*",
-    "less-middleware": "*"
-  }
+    "name": "pressuresite",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "start": "node app"
+    },
+    "dependencies": {
+        "express": "3.1.0",
+        "hjs": "*",
+        "less-middleware": "*"
+    },
+    "devDependencies": {
+        "bower": "*"
+    }
+
 }
